--- a/config/keepassxc.ini
+++ b/config/keepassxc.ini
@@ -12,6 +12,7 @@ MinimizeToTray=true
 MonospaceNotes=true
 ShowTrayIcon=true
 TrayIconAppearance=monochrome-light
+ApplicationTheme=dark
 
 [KeeShare]
 Active="<?xml version=\"1.0\"?>\n<KeeShare xmlns:xsd=\"http://www.w3.org/2001/XMLSchema\" xmlns:xsi=\"http://www.w3.org/2001/XMLSchema-instance\">\n  <Active/>\n</KeeShare>\n"
